Added 404.shtml & Updated responsiveness + Fixed broken links

--- a/policy.html
+++ b/policy.html
@@ -10,27 +10,27 @@
 	<title>Atte Tarkiainen - Privacy Policy</title>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="index.html">Atte Tarkiainen</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav ms-auto">
-					<li class="nav-item">
-						<a class="nav-link active" href="index.html"><span class="firstslave">&lt;</span>About<span class="secondslave">&gt;</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="portfolio.html"><span class="firstslave">&lt;</span>Portfolio<span class="secondslave">&gt;</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="contact.php"><span class="firstslave">&lt;</span>Contact<span class="secondslave">&gt;</span></a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Atte Tarkiainen</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html"><span class="firstslave">&lt;</span>About<span class="secondslave">&gt;</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html"><span class="firstslave">&lt;</span>Portfolio<span class="secondslave">&gt;</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.php"><span class="firstslave">&lt;</span>Contact<span class="secondslave">&gt;</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 	<div class="container">
 		<div class="row">
 			<div class="col">
