--- a/portfolio.html
+++ b/portfolio.html
@@ -10,27 +10,27 @@
 	<title>Atte Tarkiainen - Portfolio</title>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="index.html">Atte Tarkiainen</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav ms-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="index.html"><span class="firstslave">&lt;</span>About<span class="secondslave">&gt;</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="portfolio.html"><span class="firstslave">&gt;</span>Portfolio<span class="secondslave">&lt;</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="contact.php"><span class="firstslave">&lt;</span>Contact<span class="secondslave">&gt;</span></a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Atte Tarkiainen</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html"><span class="firstslave">&lt;</span>About<span class="secondslave">&gt;</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="portfolio.html"><span class="firstslave">&gt;</span>Portfolio<span class="secondslave">&lt;</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.php"><span class="firstslave">&lt;</span>Contact<span class="secondslave">&gt;</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 	<main class="portfolio">
 		<div class="container">
 			<div class="row">
@@ -59,7 +59,7 @@
 				<div class="col-lg">
 					<h1>CONTACT_BOOK.<span style="color: #FFAB52;">PY</span></h1>
 					<h4>Python <span style="color: #FFAB52;">/</span> SQL </h4>
-					<p>The goal of this project was to expand my knowledge of the class structures in Python & create an application with multiple classes that rely on each other to function. The contact book uses the PyQT -library to create a functional &amp; simple GUI, SQLite3 -library to create and manage an SQL database of the contacts &amp; the smtplib & ssl -libraries to connect to a SMTP server securely &amp; send customised emails to the selected contacts. </p>
+					<p>The goal of this project was to expand my knowledge of the class structures in Python & create an application with multiple classes that rely on each other to function. The contact book uses the PyQT -library to create a functional &amp; simple GUI, SQLite3 -library to create and manage an SQL database of the contacts &amp; the smtplib & ssl -libraries to connect to a SMTP server securely &amp; send customized emails to the selected contacts. </p>
 					<p>The technologies I used during this project: Python, PyQT, SQLite3, SMTP &amp; GIT via GitHub for version control. This project is still a work in progress.</p>
 					<!-- All credit for this open source CSS spinner goes to Tobias Ahlin @ https://tobiasahlin.com/spinkit/ -->
 					<div class="spinner">
@@ -80,7 +80,7 @@
 				<div class="col-lg">
 					<h1>POSTILAATIKOT.<span style="color: #FFAB52;">FI</span> & POSTBOXESUKLTD.<span style="color: #FFAB52;">CO</span>.<span style="color: #FFAB52;">UK</span></h1>
 					<h4>HTML <span style="color: #FFAB52;">/</span> CSS <span style="color: #FFAB52;">/</span> WordPress</h4>
-					<p>I was involved in building the PostBoxes UK LTD's finnish website (postilaatikot.fi) &amp; in updating their english website (postboxesukltd.co.uk). The project consisted of using the WordPress content management system to create, publish &amp; edit the content &amp; visuals of the website. These were also the projects during which I learned the basics of HTML & CSS.</p>
+					<p>I was involved in building the PostBoxes UK LTD's Finnish website (postilaatikot.fi) &amp; in updating their English website (postboxesukltd.co.uk). The project consisted of using the WordPress content management system to create, publish &amp; edit the content &amp; visuals of the website. These were also the projects during which I learned the basics of HTML & CSS.</p>
 					<p>The technologies I used during this project: WordPress (CMS), HTML &amp; CSS.</p>
 					<div style="text-align: center;">
 						<a href="https://www.postboxesukltd.co.uk/"><img border="0" alt="external-link" src="link.png" width="50" height="50" style="margin: 25px auto;"></a>
@@ -102,7 +102,7 @@
 				<div class="col-lg">
 					<h1>CALCULATOR.<span style="color: #FFAB52;">PY</span></h1>
 					<h4>Python</h4>
-					<p>Fully functional calculator with a GUI. This was my first ever Python project & I set myself the goals of learning the syntax, learning how to use a GUI library to create a simple GUI & how to use classes & functions to create an easily readible &amp; efficient code structure. I chose to use Tkinter as the GUI library for the sole reason of it being packaged with Python &amp; I didn't want any external dependencies on the project. The Calculator´s functionalities and GUI layout was inspired by the standard windows calculator.</p>
+					<p>Fully functional calculator with a GUI. This was my first ever Python project & I set myself the goals of learning the syntax, learning how to use a GUI library to create a simple GUI & how to use classes & functions to create an easily readable &amp; efficient code structure. I chose to use Tkinter as the GUI library for the sole reason of it being packaged with Python &amp; I didn't want any external dependencies on the project. The Calculator´s functionalities and GUI layout were inspired by the standard Windows calculator.</p>
 					<p>The technologies I used during this project: Python, Tkinter &amp; GIT via GitHub for version control.</p>
 					<div style="text-align: center;">
 						<a href="https://www.github.com/atteilari/calculator-python/"><img border="0" alt="github-logo" src="github-logo.png" width="50" height="50" style="margin: 25px auto;"></a>
