--- a/index.html
+++ b/index.html
@@ -1,79 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Open+Sans+Condensed:wght@300&family=Permanent+Marker&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="index.css">
-  <title>Atte Tarkiainen - About Me</title>
-</head>
-<body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Atte Tarkiainen</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#about-me"><span class="firstslave">&gt;</span>About<span class="secondslave">&lt;</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="portfolio.html"><span class="firstslave">&lt;</span>Portfolio<span class="secondslave">&gt;</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.php"><span class="firstslave">&lt;</span>Contact<span class="secondslave">&gt;</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <section id="banner">
-    <img src="banner.jpg" style="max-width: 100%; padding-top: 40px;">
-      <div class="left">
-        <h1>ICT_Student.<span style="color: #FFAB52;">exe</span></h1>
-        <p><span style="color: #FFAB52;">#</span>Information Technology & Business student with an eye for detail. I study at Laurea University of Applied Sciences in the Information Technology Bachelors of Business Administration degree program.</p>
-      </div>
-      <div class="right">
-        <h2>&lt;<span style="color: #FFAB52;">h2</span>&gt;developer&lt;<span style="color: #FFAB52;">h2</span>&gt;</h2>
-        <p>&lt;<span style="color: #FFAB52;">p</span>&gt;Full-Stack web development, software development & project management. The trifecta that piques my interest & the trifecta I work to develop my skills for.&lt;<span style="color: #FFAB52;">p</span>&gt;</p>
-      </div>
-    </section>
-    <section class="about-me" id="about-me">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <div style="height: 30px"></div>
-            <h1>About_Me.<span style="color: #FFAB52;">txt</span></h1>
-            <h4>21 years <span style="color: #FFAB52;">/</span> Finland <span style="color: #FFAB52;">/</span> Finnish &#38 English</h4>
-            <p>Information Technology &#38 Business Student with an eye for detail. Studying in the Bachelors of Business Administration program at Laurea University of Applied Sciences. Passionate about learning &#38 expanding my ICT knowledge and skillset. Interested in full-stack web development, software development &#38 project management in both of the beforementioned fields. My previous employment has enabled me to develop skills in leadership, teamwork, basic web development, and organization and I am always excited to learn &#38 develop new applicable skills for my chosen field. If you want to know more about my previous positions, my competencies, or my education, please don't hesitate to contact me through LinkedIn or the email contact form on this website. </p>
-            <hr>
-            <h1>Work_Experience.<span style="color: #FFAB52;">db</span></h1>
-            <ul>
-              <li><span style="color: #FFAB52; font-weight: 700;">Sales Representative</span> for Salaojakympit from January 2020 - March 2020</li>
-              <li><span style="color: #FFAB52; font-weight: 700;">Sales Representative</span> for Rainmaker, Helsingin Sanomat from September 2018 - January 2019.</li>
-              <p>Recommendator: <span style="color: #FFAB52;">Nikke Vesanen</span> - Sales Manager for my sales team.</p>
-              <li><span style="color: #FFAB52; font-weight: 700;">Jr. Freelance Web Developer</span> for multiple different companies and groups from 2016 - 2018</li>
-              <p>Recommendator: <a href="https://www.linkedin.com/in/charlespostboxesuk/" target="_blank"><u>Charles Riley</u></a> - Commercial Director at PostBoxes UK</p>
-            </ul>
-            <hr>
-            <h1>Education.<span style="color: #FFAB52;">db</span></h1>
-            <ul>
-              <li><span style="color: #FFAB52; font-weight: 700;">Bachelor of Business Adminstration</span> - Information Technology & Business 2021 - 2024</li>
-              <li><span style="color: #FFAB52; font-weight: 700;">Reserve Officer School</span> - Mandatory conscript service January 2019 - December 2019. Graduated as 2nd Lieutenant.</li>
-              <li><span style="color: #FFAB52; font-weight: 700;">High School Graduate</span> - Vihti High School (Vihdin Lukio) - 2015-2018</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-    <footer>
-      <a href="contact.php"><img border="0" alt="email-logo" src="email-image.png" width="30" height="30" style="margin-right: 1%"></a>
-      <a href="https://linkedin.com/in/atte-tarkiainen/"><img border="0" alt="linked-in-logo" src="linked-in-image.png" width="30" height="30" style="margin-right: 2%"></a> © Atte Tarkiainen 2021 - All Rights Reserved - <a href="policy.html">Privacy Policy</a>
-    </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-</body>
+    <head>
+        <!-- Meta Tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+        <!-- Custom CSS -->
+        <link href="index.css" rel="stylesheet">
+        <!-- Bootstrap JavaScript -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+        <!-- Custom JavaScript -->
+        <!-- Google Fonts-->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&amp;family=Open+Sans+Condensed:wght@300&amp;family=Permanent+Marker&amp;family=Roboto+Slab:wght@500&amp;display=swap" rel="stylesheet">
+        <!-- Font Awesome -->
+        <script src="https://kit.fontawesome.com/9d5e9ec4cf.js" crossorigin="anonymous"></script>
+        <title>Atte Tarkiainen</title>
+    </head>
+    <body>
+        <!-- Navigation bar -->
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">Atte Tarkiainen</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="about.html"><span class="firstslave">&lt;</span>About<span class="secondslave">&gt;</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="portfolio.html"><span class="firstslave">&lt;</span>Portfolio<span class="secondslave">&gt;</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="contact.php"><span class="firstslave">&lt;</span>Contact<span class="secondslave">&gt;</span></a>
+                    </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Landing banner, headings & call to action -->
+        <section id="banner">
+            <img src="banner.jpg" style="max-width: 100%;">
+                <div class="left">
+                    <h2>ICT_Student.<span class="orange">exe</span></h2>
+                    <p><span class="orange">#</span>Information Technology &amp; Business student with an eye for detail. I study at Laurea University of Applied Sciences in the Information Technology Bachelors of Business Administration degree program.</p>
+                </div>
+                <div class="right">
+                    <h2>&lt;<span class="orange">h2</span>&gt;developer&lt;<span class="orange">h2</span>&gt;</h2>
+                    <p>&lt;<span class="orange">p</span>&gt;Full-Stack web development, software development &amp; project management. The trifecta that peaques my interest &amp; the trifecta I work to develop my skills for.&lt;<span class="orange">p</span>&gt;</p>
+                </div>
+        </section>
+        <!-- Project showcase -->
+        <section id="showcase">
+            <div class="container">
+                <h1>PROJECT_<span class="blue">SHOWCASE</span>.<span class="orange">EXE</span></h1>
+                <!-- Bootstrap carousel /w captions, indicators & buttons -->
+                <div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner border-gradient border-gradient-accent">
+                        <div class="carousel-item active">
+                            <img src="contacbookpy.png" class="d-block w-100" alt="contactbook">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>CONTACT-BOOK.<span class="orange">PY</span></h5>
+                                <p>Contact-Book application that utilizes an SQLite3 database to store & access contacts <br>
+                                complete with SMTP driven email functionality & a PyQT GUI. Written in Python.</p>
+                                <a class="btn btn-primary border-gradient border-gradient-accent" href="portfolio.html#contactbookpy" role="button">See More!</a>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="attetarkiainencom.png" class="d-block w-100" alt="attetarkiainen.com">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>ATTETARKIAINEN.<span class="orange">COM</span></h5>
+                                <p>Resume & Portfolio website built with HTML5, SCSS, Bootstrap & PHP.</p>
+                                <a class="btn btn-primary border-gradient border-gradient-accent" href="portfolio.html#attetarkiainencom" role="button">See More!</a>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="calculatorpy.png" class="d-block w-100" alt="calculator">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>CALCULATOR.<span class="orange">PY</span></h5>
+                                <p>Fully functional calculator. Tkinter GUI, written in Python.</p>
+                                <a class="btn btn-primary border-gradient border-gradient-accent" href="portfolio.html#calculatorpy" role="button">See More!</a>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"  data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"  data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+        <!-- Footer -->
+        <footer class="container-fluid">
+                <div class="row">
+                    <div class="col"><hr></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div style="padding-top: 15px;">
+                        <h3>ATTE TARKIAINEN</h3>
+                        <p>contact@attetarkiainen.com</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div style="padding-top: 15px;">
+                        <p>© Copyright Atte Tarkiainen 2021 - <span class="cc">∞</span></p>
+                        <p>All rights reserved.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="links">
+                        <a href="https://linkedin.com/in/atte-tarkiainen/" hreflang="en" target="_blank" title="Linked In"><i class="fab fa-linkedin fa-3x"></i></a>
+                        <a href="https://github.com/atteilari/" hreflang="en" target="_blank" title="GitHub"><i class="fab fa-github-square fa-3x"></i></a>
+                        </div>
+                    </div>
+                </div>
+        </footer>
+    </body>
 </html>
