--- a/portfolio.html
+++ b/portfolio.html
@@ -1,120 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Open+Sans+Condensed:wght@300&family=Permanent+Marker&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-	<link href="portfolio.css" rel="stylesheet" type="text/css">
-	<title>Atte Tarkiainen - Portfolio</title>
-</head>
-<body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Atte Tarkiainen</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html"><span class="firstslave">&lt;</span>About<span class="secondslave">&gt;</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="portfolio.html"><span class="firstslave">&gt;</span>Portfolio<span class="secondslave">&lt;</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.php"><span class="firstslave">&lt;</span>Contact<span class="secondslave">&gt;</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-	<main class="portfolio">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg">
-					<h1>ATTETARKIAINEN.<span style="color: #FFAB52;">COM</span></h1>
-					<h4>HTML <span style="color: #FFAB52;">/</span> CSS <span style="color: #FFAB52;">/</span> PHP</h4>
-					<p>Resume &amp; portfolio website designed, coded &amp; implemented by me. This project enabled me to bring back to mind the HTML &amp; CSS languages, use the Bootstrap CSS &amp; JavaScript library &amp; get my feet wet with PHP by creating a validation script to handle the email contact form on the web page.</p>
-					<p>The technologies I used during this project: HTML, CSS, Bootstrap, JavaScript, PHP &amp; GIT via GitHub for version control.</p>
-					<div style="text-align: center;">
-						<a href="https://www.github.com/atteilari/attetarkiainen.com"><img border="0" alt="github-logo" src="github-logo.png" width="50" height="50" style="margin: 25px auto;"></a>
-					</div>
-				</div>
-				<div class="col-lg">
-					<img border="0" alt="website" src="website.png" width=100% height=100%>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg">
-					<hr>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg">
-					<img border="0" alt="contact-book" src="calculator.png" width=100% height=100%>
-				</div>
-				<div class="col-lg">
-					<h1>CONTACT_BOOK.<span style="color: #FFAB52;">PY</span></h1>
-					<h4>Python <span style="color: #FFAB52;">/</span> SQL </h4>
-					<p>The goal of this project was to expand my knowledge of the class structures in Python & create an application with multiple classes that rely on each other to function. The contact book uses the PyQT -library to create a functional &amp; simple GUI, SQLite3 -library to create and manage an SQL database of the contacts &amp; the smtplib & ssl -libraries to connect to a SMTP server securely &amp; send customized emails to the selected contacts. </p>
-					<p>The technologies I used during this project: Python, PyQT, SQLite3, SMTP &amp; GIT via GitHub for version control. This project is still a work in progress.</p>
-					<!-- All credit for this open source CSS spinner goes to Tobias Ahlin @ https://tobiasahlin.com/spinkit/ -->
-					<div class="spinner">
-						<div class="rect1"></div>
-						<div class="rect2"></div>
-						<div class="rect3"></div>
-						<div class="rect4"></div>
-						<div class="rect5"></div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg">
-					<hr>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg">
-					<h1>POSTILAATIKOT.<span style="color: #FFAB52;">FI</span> & POSTBOXESUKLTD.<span style="color: #FFAB52;">CO</span>.<span style="color: #FFAB52;">UK</span></h1>
-					<h4>HTML <span style="color: #FFAB52;">/</span> CSS <span style="color: #FFAB52;">/</span> WordPress</h4>
-					<p>I was involved in building the PostBoxes UK LTD's Finnish website (postilaatikot.fi) &amp; in updating their English website (postboxesukltd.co.uk). The project consisted of using the WordPress content management system to create, publish &amp; edit the content &amp; visuals of the website. These were also the projects during which I learned the basics of HTML & CSS.</p>
-					<p>The technologies I used during this project: WordPress (CMS), HTML &amp; CSS.</p>
-					<div style="text-align: center;">
-						<a href="https://www.postboxesukltd.co.uk/"><img border="0" alt="external-link" src="link.png" width="50" height="50" style="margin: 25px auto;"></a>
-					</div>
-				</div>
-				<div class="col-lg">
-					<img border="0" alt="postboxesukltd.co.uk" src="postboxes.png" width=100% height=100%>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg">
-					<hr>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg">
-					<img border="0" alt="calculator" src="calculator.png" width=100% height=100%>
-				</div>
-				<div class="col-lg">
-					<h1>CALCULATOR.<span style="color: #FFAB52;">PY</span></h1>
-					<h4>Python</h4>
-					<p>Fully functional calculator with a GUI. This was my first ever Python project & I set myself the goals of learning the syntax, learning how to use a GUI library to create a simple GUI & how to use classes & functions to create an easily readable &amp; efficient code structure. I chose to use Tkinter as the GUI library for the sole reason of it being packaged with Python &amp; I didn't want any external dependencies on the project. The Calculator´s functionalities and GUI layout were inspired by the standard Windows calculator.</p>
-					<p>The technologies I used during this project: Python, Tkinter &amp; GIT via GitHub for version control.</p>
-					<div style="text-align: center;">
-						<a href="https://www.github.com/atteilari/calculator-python/"><img border="0" alt="github-logo" src="github-logo.png" width="50" height="50" style="margin: 25px auto;"></a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</main>
-	<footer>
-		<a href="contact.php"><img border="0" alt="email-logo" src="email-image.png" width="30" height="30" style="margin-right: 1%"></a>
-		<a href="https://linkedin.com/in/atte-tarkiainen/"><img border="0" alt="linked-in-logo" src="linked-in-image.png" width="30" height="30" style="margin-right: 2%"></a> © Atte Tarkiainen 2021 - All Rights Reserved - <a href="policy.html">Privacy Policy</a>
-	</footer>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-</body>
+    <head>
+        <!-- Meta Tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+        <!-- Custom CSS -->
+        <link href="portfolio.css" rel="stylesheet">
+        <!-- Bootstrap JavaScript -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+        <!-- Custom JavaScript -->
+        <!-- Google Fonts-->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&amp;family=Open+Sans+Condensed:wght@300&amp;family=Permanent+Marker&amp;family=Roboto+Slab:wght@500&amp;display=swap" rel="stylesheet">
+        <!-- Font Awesome -->
+        <script src="https://kit.fontawesome.com/9d5e9ec4cf.js" crossorigin="anonymous"></script>
+        <title>Atte Tarkiainen</title>
+    </head>
+    <body>
+        <!-- Navigation bar -->
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">Atte Tarkiainen</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="about.html"><span class="firstslave">&gt;</span>About<span class="secondslave">&lt;</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="portfolio.html"><span class="firstslave">&lt;</span>Portfolio<span class="secondslave">&gt;</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="contact.php"><span class="firstslave">&lt;</span>Contact<span class="secondslave">&gt;</span></a>
+                    </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Portfolio -->
+        <main class="portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg">
+                        <h1>ATTETARKIAINEN.<span style="color: #FFAB52;">COM</span></h1>
+                        <h4>HTML5 <span style="color: #FFAB52;">/</span> SCSS <span style="color: #FFAB52;">/</span> PHP</h4>
+                        <p>Resume &amp; portfolio website designed, coded &amp; implemented by me. This project enabled me to bring back to mind the HTML &amp; CSS languages, use the Bootstrap CSS &amp; JavaScript library &amp; get my feet wet with PHP by creating a validation script to handle the email contact form on the web page.</p>
+                        <p>The technologies I used during this project: HTML5, SCSS, Bootstrap, JavaScript, PHP &amp; GIT via GitHub for version control.</p>
+                    <div style="text-align: center;">
+                        <a href="https://github.com/atteilari/" hreflang="en" target="_blank" title="GitHub"><i class="fab fa-github-square fa-3x blue"></i></a>                        </div>
+                    </div>
+                    <div class="col-lg">
+                        <img src="attetarkiainencom.png" class="img-fluid border-gradient border-gradient-accent">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg">
+                        <hr>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg">
+                        <img src="contacbookpy.png" class="img-fluid border-gradient border-gradient-accent">
+                    </div>
+                    <div class="col-lg">
+                        <h1>CONTACT_BOOK.<span style="color: #FFAB52;">PY</span></h1>
+                        <h4>Python <span style="color: #FFAB52;">/</span> SQL </h4>
+                        <p>The goal of this project was to expand my knowledge of the class structures in Python & create an application with multiple classes that rely on each other to function. The contact book uses the PyQT -library to create a functional &amp; simple GUI, SQLite3 -library to create and manage an SQL database of the contacts &amp; the smtplib & ssl -libraries to connect to a SMTP server securely &amp; send customized emails to the selected contacts. </p>
+                        <p>The technologies I used during this project: Python, PyQT, SQLite3, SMTP &amp; GIT via GitHub for version control. This project is still a work in progress.</p>
+                        <!-- All credit for this open source CSS spinner goes to Tobias Ahlin @ https://tobiasahlin.com/spinkit/ -->
+                        <div class="sk-folding-cube">
+                            <div class="sk-cube1 sk-cube"></div>
+                            <div class="sk-cube2 sk-cube"></div>
+                            <div class="sk-cube4 sk-cube"></div>
+                            <div class="sk-cube3 sk-cube"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg">
+                        <hr>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg">
+                    <h1>CALCULATOR.<span style="color: #FFAB52;">PY</span></h1>
+                        <h4>Python</h4>
+                        <p>Fully functional calculator with a GUI. This was my first ever Python project & I set myself the goals of learning the syntax, learning how to use a GUI library to create a simple GUI & how to use classes & functions to create an easily readable &amp; efficient code structure. I chose to use Tkinter as the GUI library for the sole reason of it being packaged with Python &amp; I didn't want any external dependencies on the project. The Calculator´s functionalities and GUI layout were inspired by the standard Windows calculator.</p>
+                        <p>The technologies I used during this project: Python, Tkinter &amp; GIT via GitHub for version control.</p>
+                        <div style="text-align: center;">
+                            <a href="https://github.com/atteilari/" hreflang="en" target="_blank" title="GitHub"><i class="fab fa-github-square fa-3x blue"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg">
+                        <img src="calculatorpy.png" class="img-fluid border-gradient border-gradient-accent">
+                    </div>
+                </div>
+            </div>
+        </main>
+        <!-- Footer -->
+        <footer class="container-fluid">
+            <div class="row">
+                <div class="col"><hr></div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div style="padding-top: 15px;">
+                    <h3>ATTE TARKIAINEN</h3>
+                    <p>contact@attetarkiainen.com</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div style="padding-top: 15px;">
+                    <p>© Copyright Atte Tarkiainen 2021 - <span class="cc">∞</span></p>
+                    <p>All rights reserved.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="links">
+                    <a href="https://linkedin.com/in/atte-tarkiainen/" hreflang="en" target="_blank" title="Linked In"><i class="fab fa-linkedin fa-3x"></i></a>
+                    <a href="https://github.com/atteilari/" hreflang="en" target="_blank" title="GitHub"><i class="fab fa-github-square fa-3x"></i></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
