--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
         <!-- Custom CSS -->
-        <link href="portfolio.css" rel="stylesheet">
+        <link href="portfolio.css" rel="stylesheet" type="text/css">
         <!-- Bootstrap JavaScript -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
@@ -30,10 +30,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="about.html"><span class="firstslave">&gt;</span>About<span class="secondslave">&lt;</span></a>
+                        <a class="nav-link active" aria-current="page" href="about.html"><span class="firstslave">&lt;</span>About<span class="secondslave">&gt;</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="portfolio.html"><span class="firstslave">&lt;</span>Portfolio<span class="secondslave">&gt;</span></a>
+                        <a class="nav-link" aria-current="page" href="portfolio.html"><span class="firstslave">&gt;</span>Portfolio<span class="secondslave">&lt;</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="contact.php"><span class="firstslave">&lt;</span>Contact<span class="secondslave">&gt;</span></a>
