New Design- Initial Commit
New Design for my website.  Missing responsiveness, optimization & SEO.

--- a/Concept/concept.html
+++ b/Concept/concept.html
@@ -6,10 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- CSS-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
-        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />        <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="stylesheet" href="concept.css">
         <title>Atte Tarkiainen | Resume</title>
     </head>
@@ -44,12 +44,13 @@
             <img src="banner.jpg" class="banner">
             <div class="banner-content-left">
                 <h1>STUDENT</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin porttitor elementum nulla, non eleifend neque mollis sed.</p>
+                <p>First year Information Technology & Business student in the Bachelors of Business Administration program at Laurea University of Applied Sciences</p>
             </div>
             <div class="banner-content-right">
                 <h1>DEVELOPER</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin porttitor elementum nulla, non eleifend neque mollis sed.</p>
+                <p>Coffee fueled, passionate & self motivated ICT student with an eye for detail. Specializing in web developement & project/team management. </p>
             </div>
+            <div class='icon-scroll'><div/>
         </section>
         <!-- End Landing -->
 
@@ -58,21 +59,21 @@
         <main class="container about">
             <div class="row">
                 <div class="col">
-                    <h2>| SKILLS |</h2>
-                    <i class="fab fa-3x fa-html5"></i>
-                    <p>HTML5</p>
-                    <i class="fab fa-3x fa-css3-alt"></i>
+                    <h2 style="color: #85898F;">| SKILLS |</h2>
+                    <i class="fab fa-3x fa-html5" style="color: #e44c26;"></i>
+                    <p class="test">HTML5</p>
+                    <i class="fab fa-3x fa-css3-alt" style="color: #2160aa;"></i>
                     <p>CSS3 | SCSS</p>
-                    <i class="fab fa-3x fa-python"></i>
+                    <i class="fab fa-3x fa-python" style="color: #f7bd2f;"></i>
                     <p>PYTHON</p>
-                    <i class="fab fa-3x fa-java"></i>
+                    <i class="fab fa-3x fa-java" style="color: #507e9c"></i>
                     <p>JAVA</p>
-                    <i class="fab fa-3x fa-git-alt"></i>
+                    <i class="fab fa-3x fa-git-alt" style="color: #e84d31;"></i>
                     <p>GIT | GITHUB</p>
                 </div>
                 <div class="col">
-                    <h2>| BIO |</h2>
-                    <h5> Finnish & English | 21 Years | Helsinki, FI</h5>
+                    <h2 style="color: #85898F;">| BIO |</h2>
+                    <h5 style="color: #85898F;"> Finnish & English | 21 Years | Helsinki, FI</h5>
                     <p>Ambitious & self motivated Business & Information Technology student specializing in web developement & project management. My current skillset contains languages & technologies best suited for Jr. front-end developement, but I work diligently to expand my ICT knowledge through my studies and my hobby projects.</p>
                     <p>I am fluent in English & Finnish, and I...</p>
                 </div>
@@ -81,7 +82,7 @@
         <!-- End About-->
 
         <!-- Timeline -->
-        <section class="container">
+        <main class="container">
             <div class="main-timeline">
                 <div class="timeline">
                     <div class="icon"></div>
@@ -94,7 +95,7 @@
                         </div>
                     </div>
                     <div class="timeline-content">
-                        <h5 class="title">HIGH SCHOOL</h5>
+                        <h5 class="title" style="color: #85898F;">HIGH SCHOOL</h5>
                         <p class="description">
                             Attended & graduated from Vihti High School & worked freelance as a Jr. WordPress Developer from 2017 onwards. During this time I mainly built WordPress powered template driven websites for various hobby groups & a few clients. I also got introduced to HTML & CSS during this time.
                         </p>
@@ -105,13 +106,13 @@
                     <div class="date-content">
                         <div class="date-outer">
                             <span class="date">
-                                    <span class="month">0.3 YEARS</span>
+                                    <span class="month">4 MONTHS</span>
                             <span class="year">2018</span>
                             </span>
                         </div>
                     </div>
                     <div class="timeline-content">
-                        <h5 class="title">SALES REPRESENTATIVE</h5>
+                        <h5 class="title" style="color: #85898F;">SALES REPRESENTATIVE</h5>
                         <p class="description">
                             Worked as a Sales Representative for Rainmaker OY in the Helsingin Sanomat Concept before starting my mandatory concript service in 2019. During my employment here I learned valuable principles about sales, marketing & also developed my communicational skills.
                         </p>
@@ -128,7 +129,7 @@
                         </div>
                     </div>
                     <div class="timeline-content">
-                        <h5 class="title">MANDATORY CONSCRIPT SERVICE</h5>
+                        <h5 class="title" style="color: #85898F;">MANDATORY CONSCRIPT SERVICE</h5>
                         <p class="description">
                             I served Finland's mandatory conscript service in Vekaranjärvi from January 2019 to December 2019. During my conscript service I attended Reserve Officer School in Hamina which I graduated as a 2nd Lieutenant. During my time in the conscript service I developed my organizational & leadership skills as a leader of my platoon.
                         </p>
@@ -139,7 +140,7 @@
                     <div class="date-content">
                         <div class="date-outer">
                             <span class="date">
-                                    <span class="month">0.3 Years</span>
+                                    <span class="month">4 MONTHS</span>
                             <span class="year">2020</span>
                             </span>
                         </div>
@@ -156,7 +157,7 @@
                     <div class="date-content">
                         <div class="date-outer">
                             <span class="date">
-                                    <span class="month">3 Years</span>
+                                    <span class="month">3 YEARS</span>
                             <span class="year">2021</span>
                             </span>
                         </div>
@@ -169,30 +170,68 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </main>
+        <img src="drip-down.png" class="banner" id="projects">
         <!-- End Timeline -->
 
-        <img src="drip-down.png" class="banner">
-
         <!-- Projects Gallery -->
+        <section class="container-fluid" style="background-image: url(projects.jpg); background-size: cover;">
+            <div class="row">
+                <h1 style="font-size: 100px;">| PROJECTS |</h1>
+                <div class="col-6">
+                    <div class="card hvr-forward">
+                        <img src="attetarkiainencom.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">ATTETARKIAINEN.COM</h5>                            
+                            <p class="card-text">HTML | CSS | JQUERY</p>
+                            <a href="https://github.com/atteilari/" hreflang="en" target="_blank" title="GitHub"><p class="fab fa-github fa-2x px-4"></p></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="card hvr-backward">
+                        <img src="somestailausfi.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">SOMESTAILAUS.FI</h5>                            
+                            <p class="card-text">HTML | CSS | JQUERY</p>
+                            <div class="spinner-border" role="status">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>                        
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <div class="card hvr-forward">
+                        <img src="contactbookpython.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">CONTACT-BOOK.EXE</h5>                            
+                            <p class="card-text">PYTHON | TKINTER | SMTPLIB | SQLITE3</p>
+                            <div class="spinner-border" role="status">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>                        
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="card hvr-backward">
+                        <img src="banner.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">TO BE ANNOUNCED</h5>                            
+                            <p class="card-text">JAVA</p>
+                            <div class="spinner-border" role="status">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>  
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- End Projects Gallery -->
 
         <!-- Contact Form -->
-        <section class="container-fluid" style="background-color: white;" id="contact">
-            <div class="row">
-                <div class="col"></div>
-                <div class="col-6">
-                    <form action="" method="post">
-						<input type="text" name="first_name" placeholder="Your Name">
-						<input type="text" name="email" placeholder="Your Email">
-						<input type="text" name="subject" placeholder="Subject">
-						<textarea rows="5" name="message" cols="30" placeholder="Your Message"></textarea>
-						<input type="submit" name="submit" value="Send">
-					</form>		
-                </div>
-                <div class="col"></div>
-            </div>
-        </section>
         <!-- End Contact Form-->
 
         <!-- Footer -->
@@ -200,15 +239,15 @@
         <footer class="container">
             <div class="row">
                 <div class="col">
-                    <a href="https://instagram.com/atteilari/" hreflang="en" target="_blank" title="Instagram"><i class="fab fa-instagram fa-2x px-4"></i></a>
-                    <a href="https://github.com/atteilari/" hreflang="en" target="_blank" title="GitHub"><i class="fab fa-github fa-2x px-4"></i></a>
+                    <a href="https://instagram.com/atteilari/" hreflang="en" target="_blank" title="Instagram"><p class="fab fa-instagram fa-2x px-4"></p></a>
+                    <a href="https://github.com/atteilari/" hreflang="en" target="_blank" title="GitHub"><p class="fab fa-github fa-2x px-4"></p></a>
                 </div>
                 <div class="col">
                     <p>COPYRIGHT ATTE TARKIAINEN. ALL RIGHTS RESERVED.</p>
                 </div>
                 <div class="col">
-                    <a href="contact.html" hreflang="en" target="_blank" title="Contact"><i class="far fa-envelope fa-2x px-4"></i></a>
-                    <a href="https://linkedin.com/in/atte-tarkiainen/" hreflang="en" target="_blank" title="Linked In"><i class="fab fa-linkedin-in fa-2x px-4"></i></a>
+                    <a href="contact.html" hreflang="en" target="_blank" title="Contact"><p class="far fa-envelope fa-2x px-4"></p></a>
+                    <a href="https://linkedin.com/in/atte-tarkiainen/" hreflang="en" target="_blank" title="Linked In"><p class="fab fa-linkedin-in fa-2x px-4"></p></a>
                 </div>
             </div>
         </footer>
@@ -220,6 +259,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
         <script src="navbar.js"></script>
         <script src="audio.js"></script>
+        <script src="about.js"></script>
         <!-- End JavaScript -->
 
     </body>
